Add more contents

--- a/src/content/races/2023/utmb/index.mdx
+++ b/src/content/races/2023/utmb/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "UTMB"
-description: "夏慕尼的UTMB是一年一度的越野盛會，吸引了無數越野愛好者。今年我們有四個人參加UTMB的組別，而且都安全完賽了！"
+description: "記錄我們六個人參加的UTMB，最後我們都安全完賽了。"
 image: cover.avif
 date: "2023-09-01"
 author: "追雲逐雪"
@@ -8,7 +8,4 @@ author: "追雲逐雪"
 
 2023年我們六個人踏上了UTMB的徵程。
 
-
-
-
-<YouTube id="gCbGmAFqLoU"/>
+<YouTube id="hmidfqoX6cc"/>
