--- a/src/content/races/2024/utmb/index.mdx
+++ b/src/content/races/2024/utmb/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "UTMB"
-description: "夏慕尼的UTMB是一年一度的越野盛會，吸引了無數越野愛好者。今年我們有四個人參加UTMB的組別，而且都安全完賽了！"
+description: "又到了夏慕尼一年一度的越野盛會，UTMB是。今年我們有四個人參加了UTMB的組別，而且都安全完賽了！這是院長寫的賽記錄，記錄了她的訓練心得和比賽過程。"
 image: cover.avif
 date: "2024-08-30"
 author: "王青"
