--- a/src/content/gallery/2024/whistler-by-utmb/index.mdx
+++ b/src/content/gallery/2024/whistler-by-utmb/index.mdx
@@ -1,6 +1,7 @@
 ---
 name: 2024 - Whistler by UTMB
 slug: 2024-whistlery-by-utmb
+created: 2024-09-27
 featured:
   - 16701727623073_
   - 16681727623037_
