--- a/src/content/races/2024/squamish-50-50/index.mdx
+++ b/src/content/races/2024/squamish-50-50/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Squamish 50/50"
-description: "絲瓜是溫哥華本地最出名的越野賽，今年我們組了一個大團參加"
+description: "絲瓜是溫哥華本地最出名的越野賽，是很多人越野的啟蒙比賽，今年我們組了一個大團參加"
 image: cover.svg
 date: "2024-08-18"
 author: "追雲逐雪"
