--- a/src/content/posts/2024/chicago-marathon/index.mdx
+++ b/src/content/posts/2024/chicago-marathon/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "芝加哥馬拉松 - Chiacago Marathon 2024"
 description: "芝加哥馬拉松是我六大裡的第五大，也是跑的最慢的一個，需要認真總結一下。"
-image: result.png
+image: result.PNG
 date: "2024-10-13"
 author: "追雲逐雪"
 published: true
