Update chicago marathon

--- a/src/content/posts/2024/chicago-marathon/index.mdx
+++ b/src/content/posts/2024/chicago-marathon/index.mdx
@@ -25,7 +25,9 @@ featured: true
 ## 總結
 這次深刻體會到了什麼是心有餘而力不足，心率很低，可是肌肉就是罷工了。這可能和我今年長時間低心率跑有關係，也可能和兩週前剛剛跑了一個70公里越野賽有關，不過歸根到底，還是實力的問題。
 
-越野和馬拉松的確是兩種截然不同的運動，跑馬拉松需要持續高心率跑3個小時以上，另外使用的核心肌肉群和發力方式也完全不一樣。以後要多跑間歇和tempo，讓自己的心率和肌肉都能夠適應高強度下長時間工作。一直以來我都很羨慕那些跑馬拉松可以跑到力竭的人，因為我自己做不到，心率剛剛上去，身體馬上就開啟了保護機制，不讓我做傻事。好像肌肉不允許我把他們給逼急了，所以跑馬拉松我從來沒有抽過筋。
+越野和馬拉松的確是兩種截然不同的運動，跑馬拉松需要持續高心率跑3個小時以上，另外使用的核心肌肉群和發力方式也完全不一樣。以後要多跑間歇和tempo，讓自己的心率和肌肉都能夠適應高強度下長時間工作。一直以來我都很羨慕那些跑馬拉松可以跑到力竭的人，因為我自己做不到，心率剛剛上去，身體馬上就開啟了保護機制，不讓我做傻事。好像肌肉不允許我把他們給逼急了，所以跑馬拉松我從來沒有抽過筋。這個“習慣”的好處是不容易受傷，不過壞處就是成績上不去。
+
+叮噹則提到一個挺有道理的說法：心率上不去了，从另外一個角度說明很多肌群已疲倦，沒有那麼多肌肉在有效做功了，心脏覺得不需要泵出那麼多血液來供應他們了。
 
 雖然成績不理想，不過總算完成了六大裡的五大，就剩下東京了，心裡還是很高興的。希望11月的Road to the majors可以抽中東京，那就完美了。
 
