Add chicago race

--- a/src/content/races/2024/chicago-marathon/index.mdx
+++ b/src/content/races/2024/chicago-marathon/index.mdx
@@ -4,43 +4,62 @@ description: "六大馬之一的芝加哥馬拉松從來不缺少人氣，今年
 image: logo.png
 date: "2024-10-13"
 author: "追雲逐雪"
-published: false 
+published: true
 ---
 
-2024年芝加哥馬拉松於10月13日星期日舉行，來自肯亞的Ruth Chepngetich以2小時09分56秒的驚人成績奪得女子組冠軍，同時打破了女子馬拉松世界紀錄！這也是女子馬拉松首次突破2小時10分大關，堪稱歷史性的一刻。
+這次溫哥華有不少人參加了芝加哥馬拉松，很多人最後都跑得不錯，其中Eric Duan跑了245，另外很多女生也跑得不錯，這次又被May拍肩膀。今年來自肯亞的Ruth Chepngetich以2小時09分56秒的驚人成績奪得女子組冠軍，同時打破了女子馬拉松世界紀錄！這也是女子馬拉松首次突破2小時10分大關，堪稱歷史性的一刻。所以迄今為止男女馬拉松世界紀錄都是芝加哥馬拉松創造的，說明芝加哥的賽道還是很好的，適合跑出好成績。
 
-這次我和兩個Eric同房，其中Eric Duan跑了245，
+這次雖然我沒有跑好，不過整個行程還是很不錯，很歡樂，以下簡單總結一下這次芝加哥之行除了跑步之外其他的的心得和體會。
 
-以下簡單總結一下這次芝加哥之行的心得和體會。
+## 芝加哥的交通
+從機場到市區最方便的方式是乘坐CTA的Blue Line機場線，day pass是5美金，可以乘坐公交和CTA。可以下載ventra app，註冊後直接購買，免去排隊。這裡注意的是CTA和Metra不一樣，CTA是公交，Metra是火車。我們這次去Expo座的是Metra，結果以為買了day pass不需要再買票，結果被查票的查了，還好只有兩站地，查票的也沒有罰款。
 
 ## 位置最佳的酒店
-Hilton
-HILTON CHICAGO - HEADQUARTER HOTEL
+位置最好的酒店是Hilton，就在賽道旁邊，步行到達起點，距離終點也很近。
 
+HILTON CHICAGO - HEADQUARTER HOTEL
 720 S Michigan Ave
 Chicago, IL 60605
 Phone: 312-922-4400
 Fax: 312-922-5240
 
-![酒店預訂確認郵件](2024-10-16-02-33-09.png)
-
+要訂這個酒店需要提前很久，我是2023年10月就訂了，提前了1年多。每晚的價錢350美金，加上其他的稅，最後每晚上400多美金。一個房間可以最多住4個人，所以如果4個人一起住，每個人分攤下來也就100多美金。
 
 ## 推薦的飯店
 
-Hilton附近最好的中餐是明軒（Minghin Cuisine），是一家粵菜。明軒是一家連鎖店，在酒店附近走路能到達的一南一北有兩家:
+芝加哥有很多中餐，明軒（Minghin Cuisine）是以前跑過芝加哥的前輩推薦的飯店，是一家粵菜連鎖店，在Hilton附近走路能到達，一南一北有兩家:
+
 1234 S Michigan Ave, Chicago, IL 60605, United States
 333 E Benton Pl #300, Chicago, IL 60601, United States
 
+週六我們總共去了三次，早、中、晚，最後我們都感覺有點補碳過份了。不過味道還是挺好的，價錢也不貴，三個人吃一頓飯人均25-30美金。
 
 ## 推薦的活動
+芝加哥的幾個地標都在Hilton附近，走路可以到達：
+- Cloud Gate
+- Crown Fountain
+- Clarence F. Buckingham Memorial Fountain
 
-Cloud Gate
-Crown Fountain
-Clarence F. Buckingham Memorial Fountain
+賽後的活動也有很多選擇，例如去耐克旗艦店，對面四層樓的星巴克Starbucks Reserve Roastery，還有DuSable Bridge邊上可以參加Wendella Tours & Cruises的遊船。購買的連結：（https://www.wendellaboats.com/Boat-Tours/chicagos-original-architecture-tour/）
 
-賽後的活動有很多選擇，例如去耐克旗艦店，對面四層樓的星巴克Starbucks Reserve Roastery。
+## 經典相片
 
-DuSable Bridge邊上可以參加Wendella Tours & Cruises的遊船，購買的連結：（https://www.wendellaboats.com/Boat-Tours/chicagos-original-architecture-tour/）
+跑芝加哥最經典相片是背景有Chicago標誌的劇院，垂直标志上用发光的槽形字母拼出“CHICAGO”字样，是芝加哥市的象征，也是美国少数仍在使用的原始外露灯泡电灯招牌之一。這次只有跑得比較快的Eric收穫了一張經典相片，不過在KK的幫助下，我們每個人都收穫了一張。
 
+
+![搞笑相片](14621729021454_.pic.jpg)
+
+![KK惡搞相片](14821729053883_.pic.jpg)
+
+![KK惡搞相片](16611729304974_.pic.jpg)
+
+![KK惡搞相片](16631729305211_.pic.jpg)
+
+![KK惡搞相片](17321729391282_.pic.jpg)
+
+![KK惡搞相片](17271729390425_.pic.jpg)
+
+
+## 感謝
 
 印象深刻的是芝加哥的chi跑團組織的非常好，從賽前的補碳會、賽中的義工組織和賽後的相片分享都非常周到和專業。很感謝他們的辛勤付出！！
