Update content and photos

--- a/src/content/posts/2024/royal-victoria-marathon/index.mdx
+++ b/src/content/posts/2024/royal-victoria-marathon/index.mdx
@@ -30,7 +30,7 @@ featured: true
 
 这次比赛 我一共准备了8 支胶和4颗盐丸，赛前30分钟吃了第一支胶。在比赛中每8km吃一支 胶，每10km含一颗盐丸。我把盐丸用嘴咬破，然后到补水站用水冲到肚子里。后来回来看盐完的说明书，应该把整粒吞到肚子里，盐丸可以在肚子里缓慢的释放电解质。我下一次马拉松比赛就知道怎么用盐丸了。
 
-这次维马的目标是能够BQ，3:30 以内，那平均配速应该是4分55左右。8:15全马和半马同时出发，前5km，虽然我尽量告诉自己要慢要慢，但是配速还是在440左右。6km~10km，速度稍微慢了一点点，但是经过10km的时候，大约是 46 分，配速440。到20km用了1小时34分，配速442。半码139配速442。一直到31km 我的配速基本上是保持在 445左右。  在31km 处迎来了一个3km长的rolling hill, 上坡下坡的组合，对我的体力有很大的挑战。这个时候我的配速有所下降，在455~500的左右。35km~37km 虽然是一个下坡，但对我配速根本没有任何的帮助。因为怕担心抽筋，所以我也保持同样的配速，甚至配速有时候降到530。37km~39km又是一个长长的上坡，我告诉自己，这次不可以走路，即使慢点，也一定要坚持跑，配速保持在550~510期间。39km-40km是一个下坡，配速也保持在 500 左右。40km~42km 的最后两公里基本上是平路，我把最后一支能量胶吃掉，做最后的冲刺，但经过了40多公里的跑步，双脚就是很难达到以前的状态，虽然如此，也保持在500的配速冲过了终点。最后以3小时28分56秒完赛。完成了BQ的目标，并且创造了自己个人最好成绩。
+这次维马的目标是能够BQ，3:30 以内，那平均配速应该是4分55左右。8:15全马和半马同时出发，前5km，虽然我尽量告诉自己要慢要慢，但是配速还是在440左右。6km-10km，速度稍微慢了一点点，但是经过10km的时候，大约是 46 分，配速440。到20km用了1小时34分，配速442。半码139配速442。一直到31km 我的配速基本上是保持在 445左右。  在31km 处迎来了一个3km长的rolling hill, 上坡下坡的组合，对我的体力有很大的挑战。这个时候我的配速有所下降，在455-500的左右。35km-37km 虽然是一个下坡，但对我配速根本没有任何的帮助。因为怕担心抽筋，所以我也保持同样的配速，甚至配速有时候降到530。37km-39km又是一个长长的上坡，我告诉自己，这次不可以走路，即使慢点，也一定要坚持跑，配速保持在550-510期间。39km-40km是一个下坡，配速也保持在 500 左右。40km~42km 的最后两公里基本上是平路，我把最后一支能量胶吃掉，做最后的冲刺，但经过了40多公里的跑步，双脚就是很难达到以前的状态，虽然如此，也保持在500的配速冲过了终点。最后以3小时28分56秒完赛。完成了BQ的目标，并且创造了自己个人最好成绩。
 
 ## 赛后总结
 回想维马，31km之后还是有所掉速，我对自己说，坚持不走路，怎么也要把它跑下来，虽然非常痛苦非常累。这次马拉松为我下一次马拉松提供了非常好的经验，我在以后的训练中要加强LSD的训练，在长距离让肌肉可以更加适应，防止 32km以后掉速。
@@ -40,3 +40,30 @@ featured: true
 ## 展望2025
 回顾2024年，我跑了两个半马和两个全马，同时兼顾龙舟竞技队的比赛。展望2025年，我将吸取2024年的训练比赛的经验和教训，在2025年会取得更好的成绩。
 不知不觉我已入坑，参与到世界大满贯马拉松比赛的行列，明年已经报名参加芝加哥马拉松，并且在默默地努力看能不能够抽到伦敦、东京和纽约的比赛资格。未来几年就拭目以待，希望自己以后快乐训练，不要受伤，享受马拉松给我带来的快乐。
+
+## 图片
+
+定妝照
+![定妝照](1621730606921_.pic.jpg)
+
+![定妝照](1661730606922_.pic.jpg)
+
+出發
+![出發](1681730606923_.pic.jpg)
+
+獎牌
+![獎牌](1641730606922_.pic.jpg)
+
+比赛結果
+![比赛結果](1671730606923_.pic.jpg)
+
+Expo
+![Expo](1691730606924_.pic.jpg)
+
+![Expo](1701730606925_.pic.jpg)
+
+![Expo](1711730606925_.pic.jpg)
+
+![Expo](1631730606922_.pic_hd.jpg)
+
+![Expo](1651730606922_.pic_hd.jpg)
