删除Ridd Ma的作者信息，更新主页内容，新增UTMB和芝加哥马拉松赛事相关帖子，添加多个图片和视频文件，更新全球变量中的描述和关键词。

--- a/src/content/posts/2024/fat-dog/index.mdx
+++ b/src/content/posts/2024/fat-dog/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "胖狗 ｜ FatDog"
+title: "胖狗 ｜ FatDog | 2024"
 description: "Learn how to strongly type process.env in Typescript by either augmentng global type or validating it at runtime with t3-env."
 image: cover.jpg
 date: "2024-08-09"
