--- a/src/content/posts/2024/whistler-by-utmb/index.mdx
+++ b/src/content/posts/2024/whistler-by-utmb/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Whistler by UTMB"
+title: "Whistler by UTMB | 2024"
 description: "Whistler第一屆by UTMB，之前由於和WAM的瓜葛，遭到很多本地的西人runner的抵制。不過家門口的比賽，還可以拿石頭，還是必須要參加！"
 image: logo_whistler-by-utmb.avif
 date: "2024-09-28"
