--- a/src/content/posts/2024/qmt/index.mdx
+++ b/src/content/posts/2024/qmt/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Québec Méga Trail - QMT"
+title: "Québec Méga Trail - QMT | 2024"
 description: "QMT是在東部魁北克省一個出名的越野賽，去年在永哥的張羅下，我們組成了一個13個人的大圖參加。"
 image: cover.jpg
 date: "2024-07-06"
