更新主页，移除“最新赛事”标题，调整卡片容器的样式；更新UTMB帖子描述，详细记录作者的比赛经历；新增2025年富士山100赛事的帖子及相关图片。

--- a/src/content/posts/2024/utmb/index.mdx
+++ b/src/content/posts/2024/utmb/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "我的第一场百迈越野—UTMB"
-description: "又到了夏慕尼一年一度的越野盛會，UTMB是。今年我們有四個人參加了UTMB的組別，而且都安全完賽了！這是院長寫的賽記錄，記錄了她的訓練心得和比賽過程。"
+description: "記錄了王青首次挑戰並成功完成UTMB百英里越野賽的心路歷程。作者從十年跑步經歷談起，細緻描述了備賽過程中的艱苦訓練、賽前準備、比賽途中身心極限的考驗，以及與隊友、家人和朋友間的深厚情誼。文章展現了越野跑者面對困難時的堅持與成長，並通過細膩的敘述，傳達了挑戰自我、突破極限後的成就感與感悟。最後，作者感謝了陪伴和支持自己的親友，並以溫暖的語調總結了這段難忘的經歷。"
 image: cover.avif
 date: "2024-08-30"
 author: "王青"
